--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 
   Data has been acquired with the external muon counter system placed in the three different positions, corresponding to cosmic rays hitting different parts of the LArTPC.
 
-  The reconstruction of the tracks is performed using the multi-algorithm Pandora framework. The data reconstruction efficiency is $\epsilon_{\mathrm{data}}=96.1\pm0.1~(\mathrm{stat}) \pm 1.1~(\mathrm{sys})~\%$, in good agreement with the Monte Carlo reconstruction efficiency $\epsilon_{\mathrm{MC}} = 96.3\pm0.1~\%$.
+  The reconstruction of the tracks is performed using the multi-algorithm Pandora framework. The data reconstruction efficiency is $\epsilon_{\mathrm{data}}=96.1\pm0.1~(\mathrm{stat}) \pm 1.3~(\mathrm{sys})~\%$, in good agreement with the Monte Carlo reconstruction efficiency $\epsilon_{\mathrm{MC}} = 96.3\pm0.1~\%$.
 
   %We show that the presence of detector non-uniformities, caused by regions with missing wires, leads to a systematic uncertainty in the measurement of the data reconstruction efficiency.
 
@@ -259,7 +259,8 @@ where the $P/A$ ratio will be taken from the MuCS Monte Carlo simulation, while 
 
 Figure \ref{fig:purity} shows the tagging efficiency both for data ($\epsilon^{\mathrm{data}}_{\mathrm{tag}}$) and Monte Carlo  ($\epsilon^{\mathrm{MC}}_{\mathrm{tag}}$), the purity $P$ and the acceptance $A$ as a function of $d_{\mathrm{max}}$. The MuCS reconstruction efficiencies for data ($\epsilon_{\mathrm{data}}$) and Monte Carlo ($\epsilon_{\mathrm{MC}}$) are also shown as a reference.
 
-Using eq. \eqref{eq:eff}, our Monte Carlo reconstruction efficiency $\epsilon_{\mathrm{MC}}$ will not depend on the chosen value of $d_{\mathrm{max}}$. The leftover dependence of the data reconstruction efficiency $\epsilon_{\mathrm{data}}$ on $d_{\mathrm{max}}$ (see figure \ref{fig:purity}) will be due to the small discrepancies between the trend of $\epsilon^{\mathrm{data}}_{\mathrm{tag}}$ and $\epsilon^{\mathrm{MC}}_{\mathrm{tag}}$. For convenience's sake, we chose a value of $d_{\mathrm{max}}$ that corresponds to $P/A = 1$, which in our case resulted to be $d_{\mathrm{max}}=32~\mathrm{cm}$.
+Using eq. \eqref{eq:eff}, our Monte Carlo reconstruction efficiency $\epsilon_{\mathrm{MC}}$ will not depend on the chosen value of $d_{\mathrm{max}}$. The small dependence of the data reconstruction efficiency $\epsilon_{\mathrm{data}}$ on $d_{\mathrm{max}}$ (see figure \ref{fig:purity}) is be due to the small discrepancies between the trend of $\epsilon^{\mathrm{data}}_{\mathrm{tag}}$ and $\epsilon^{\mathrm{MC}}_{\mathrm{tag}}$. The difference between the lowest and the highest value of $\epsilon_{\mathrm{data}}$ is 0.2\%. This value has been used to quote the systematic uncertainty related to the $P/A$ correcting factor.
+For convenience's sake, we chose a value of $d_{\mathrm{max}}$ that corresponds to $P/A = 1$, which in our case resulted to be $d_{\mathrm{max}}=32~\mathrm{cm}$.
 
 
 \begin{figure}[htbp]
@@ -353,7 +354,7 @@ Moreover, since their $\theta$ angle is close to $90^\circ$, they are also align
 
 
 
-We quote the systematic uncertainty related to the detector non-uniformities for each $\theta,\phi,L$ bin as the difference between the best reconstructing efficiency of the three configurations and the overall reconstruction efficiency (obtained merging the three dataset), a method described in \cite{besiii}.
+We quote the systematic uncertainty related to the detector non-uniformities for each $\theta,\phi,L$ bin as the difference between the best reconstructing efficiency of the three configurations and the overall reconstruction efficiency (obtained merging the three dataset), a method described in \cite{besiii}. The overall systematic uncertainty resulted to be 1.1\%.
 
 \subsection{Energy sampling}
 The multiple Coulomb scattering depends on the energy of the cosmic ray. The angular dispersion $\theta_{0}$ of a cosmic muon can be, in fact, calculated by the relation, expressed in \cite{pdg}:
@@ -394,11 +395,11 @@ It is now possible to compare the data and Monte Carlo reconstruction efficienci
   \end{center}
 \end{figure}
 
-Taking into account the systematic uncertainty given by the detector non-uniformities, as described in section \ref{sec:wires}, the obtained data/Monte Carlo agreement is satisfactory, with almost every bin with a data/Monte Carlo ratio within 2$\sigma$ of unity. As expected, the reconstruction efficiency is proportional to the expected track length $L$ in the TPC, since longer tracks correspond, in general, to a larger number of hit wires and they are then easier to reconstruct.
+Taking into account the systematic uncertainty given by the detector non-uniformities (1.1\%), described in section \ref{sec:wires}, and by the $P/A$ correcting factor (0.2\%), described in section \ref{sec:reco}, the obtained data/Monte Carlo agreement is satisfactory, with almost every bin with a data/Monte Carlo ratio within 2$\sigma$ of unity. As expected, the reconstruction efficiency is proportional to the expected track length $L$ in the TPC, since longer tracks correspond, in general, to a larger number of hit wires and they are then easier to reconstruct.
 
 The overall reconstruction efficiency, obtained integrating the three-dimensional plot, is:
 \begin{align*}
-\epsilon_{\mathrm{data}} &= 96.1 \pm 0.1~\mathrm{(stat)} \pm 1.1~\mathrm{(sys)}~\%\\
+\epsilon_{\mathrm{data}} &= 96.1 \pm 0.1~\mathrm{(stat)} \pm 1.3~\mathrm{(sys)}~\%\\
 \epsilon_{\mathrm{MC}} &= 96.3 \pm 0.1~\%
 \end{align*} for data and Monte Carlo, respectively. The agreement between the two values is within the error.
 
