--- a/main.tex
+++ b/main.tex
@@ -257,7 +257,7 @@ The acceptance $A$ of our cut on $d_{\mathrm{max}}$ will be defined as the ratio
   A=\frac{\mathrm{N.~of~reco.~MuCS~cosmic\myhyphen ray~events~within~}d_{\mathrm{max}}}{\mathrm{N.~of~reco.~MuCS~cosmic\myhyphen ray~events}}.
 \end{equation}
 The MuCS reconstruction efficiency as defined in \eqref{eq:eff}, can then be obtained, both for data ($\epsilon_{\mathrm{data}}$) and for MuCS Monte Carlo ($\epsilon_{\mathrm{MuCS\myhyphen MC}}$), by:
-\begin{equation}\label{eq:eff}
+\begin{equation}\label{eq:mceff}
   \epsilon = \epsilon_{\mathrm{tag}} \times P / A.
 \end{equation}
 where the $P/A$ ratio will be taken only from the MuCS Monte Carlo simulation, while $\epsilon_{\mathrm{tag}}$ can be measured with the data, $\epsilon^{\mathrm{data}}_{\mathrm{tag}}$, or with the MuCS Monte Carlo simulation, $\epsilon^{\mathrm{MuCS\myhyphen MC}}_{\mathrm{tag}}$.
@@ -275,7 +275,7 @@ For convenience's sake, we chose a value of $d_{\mathrm{max}}$ that corresponds 
   \end{center}
 \end{figure}
 
-The Monte Carlo cosmic-ray reconstruction efficiency, obtained with a general Monte Carlo distribution as defined in section \ref{sec:merging}, can be directly defined as:
+The Monte Carlo cosmic-ray reconstruction efficiency, obtained with a general Monte Carlo distribution generated as described in section \ref{sec:merging}, can be directly defined as:
 \begin{equation}
   \epsilon_{\mathrm{MC}} = \frac{\mathrm{N.~of~reco.~cosmic\myhyphen ray~events}}{\mathrm{N.~of~generated~cosmic\myhyphen ray~events}}.
 \end{equation}
@@ -297,6 +297,17 @@ Our efficiency can then be plotted as a three-dimensional histogram: each bin wi
   \end{subfigure}
   \caption{Monte Carlo and data three-dimensional reconstruction efficiency as a function of the starting angles $\theta$, $\phi$ and the extrapolated track length $L$. A larger box corresponds to a larger efficiency. The empty region in the upper part of the plot corresponds to a region of the parameter space not covered by our dataset.}\label{fig:3d}
 \end{figure}
+
+\subsection{Decay-in-flight muons}
+The cosmic muons hitting the MuCS can decay in flight before reaching the LArTPC. In this case, they would trigger the MuCS but would not generate a cosmic track in the detector. Since in our definition of the data reconstruction efficiency $\epsilon_{\mathrm{data}}$, eq. \eqref{eq:eff}, the denominator correspond to the number of MuCS-triggered events, we need to correct for this effect. From our MuCS Monte Carlo simulation we measured the fraction of cosmic rays that go through the MuCS but decay before reaching the LArTPC:
+\begin{equation}
+D = \frac{\mathrm{N.~of~decays~in~flight}}{\mathrm{N.~of~MuCS~triggered~events}} = (1.0 \pm 0.1) \%.
+\end{equation}
+We assume this correction factor to be independent from $\theta$, $\phi$ and $L$. The corrected data reconstruction efficiency is given by:
+\begin{equation}
+\epsilon_{\mathrm{data}}^{\mathrm{corr}} =  \frac{\epsilon_{\mathrm{data}}}{1-D}.
+\end{equation}
+The statistical uncertainty of the correcting factor $D$, 0.1\%, is propagated and included in the list of the data reconstruction efficiency systematic uncertainties.
 
 \subsection{Detector non-uniformities}\label{sec:wires}
 The presence of detector non-uniformities can introduce a systematic uncertainty in the measurement of the reconstruction efficiency. In particular, the presence of noisy or unresponsive wires in specific regions of the detector can lower the reconstruction efficiency in some of our three dataset. However, the different configurations allow us to cover different regions of the TPC, providing information on potential non-uniformities.
@@ -405,12 +416,12 @@ It is now possible to compare the data and Monte Carlo reconstruction efficienci
   \end{center}
 \end{figure}
 
-Taking into account the systematic uncertainty given by the detector non-uniformities (1.1\%), described in section \ref{sec:wires}, and by the $P/A$ correcting factor (0.2\%), described in section \ref{sec:reco}, the obtained data/Monte Carlo agreement is satisfactory, with almost every bin with a data/Monte Carlo ratio within 2$\sigma$ of unity. As expected, the reconstruction efficiency is proportional to the expected track length $L$ in the TPC, since longer tracks correspond, in general, to a larger number of hit wires and they are then easier to reconstruct.
+Taking into account the systematic uncertainty given by (1) the decay-in-flight correction factor (0.1\%, section \ref{sec:dif}), (2) the detector non-uniformities (1.1\%, in section \ref{sec:wires}), and (3) the $P/A$ correcting factor (0.2\%, section \ref{sec:reco}), the obtained data/Monte Carlo agreement is satisfactory, with almost every bin with a data/Monte Carlo ratio within 2$\sigma$ of unity. As expected, the reconstruction efficiency is proportional to the expected track length $L$ in the TPC, since longer tracks correspond, in general, to a larger number of hit wires and they are then easier to reconstruct.
 
 The overall reconstruction efficiency, obtained integrating the three-dimensional plot, is:
 \begin{align*}
-\epsilon_{\mathrm{data}} &= 96.1 \pm 0.1~\mathrm{(stat)} \pm 1.3~\mathrm{(sys)}~\%\\
-\epsilon_{\mathrm{MC}} &= 96.3 \pm 0.1~\%
+\epsilon_{\mathrm{data}} &= 97.1 \pm 0.1~\mathrm{(stat)} \pm 1.4~\mathrm{(sys)}~\%\\
+\epsilon_{\mathrm{MC}} &= 97.3 \pm 0.1~\%
 \end{align*} for data and Monte Carlo, respectively. The agreement between the two values is within the error.
 
 \begin{figure}[htbp]
@@ -468,6 +479,26 @@ However, the coverage of the ($\theta, \phi, L$) parameter space provided by the
 \clearpage{}
 
 \appendix
+\section{Angular cuts}
+In order to increase the purity of our sample it is possible to apply a cut on the difference between the extrapolated MuCS angles and the reconstructed track angles:
+\begin{equation}
+\Delta\theta = \theta_{\mathrm{MuCS}}-\theta_{\mathrm{reco}}, \quad \Delta\phi = \phi_{\mathrm{MuCS}}-\phi_{\mathrm{reco}}.
+\end{equation}
+In this way, reconstructed tracks closer than $d_{\mathrm{max}}$ but that do not correspond to a MuCS cosmic ray will have large $\Delta\theta$, $\Delta\phi$ values. $\Delta\theta$ and $\Delta\phi$ distributions, obtained with a MuCS Monte Carlo simulation, are plotted in Figure \ref{fig:res}.
+
+\begin{figure}[htbp]
+  \begin{subfigure}{0.5\textwidth}
+    \includegraphics[width=\linewidth]{figures/theta_res.pdf}
+    \caption{$\Delta\theta$}
+  \end{subfigure}
+  \begin{subfigure}{0.5\textwidth}
+    \includegraphics[width=\linewidth]{figures/phi_res.pdf}
+    \caption{$\Delta\phi$}
+  \end{subfigure}
+\caption{Distribution of the difference between the extrapolated MuCS angles $\theta_{\mathrm{MuCS}}$, $\phi_{\mathrm{MuCS}}$ and the reconstructed angles $\theta_{\mathrm{reco}}$, $\phi_{\mathrm{reco}}$, obtained with a MuCS Monte Carlo simulation.}\label{fig:res}
+\end{figure}
+
+Selecting only the events with $|\Delta\theta| < 2^{\circ}$ and $|\Delta\phi| < 2^{\circ}$ increases the purity of the sample by 0.1\%. The effect of this cut has then been considered negligible.
 
 \section{Technical details}
 The datasets used in this analysis correspond to run 3702, for the central configuration, run 7347 for the downstream configuration and run 7702, 7703 for the upstream configuration. The reconstruction stages \texttt{reco1} and \texttt{reco2} use \texttt{uboonecode v05\_08\_00}. Their configuration is provided by the standard fcl files \texttt{reco\_uboone\_mcc7\_driver\_stage1.fcl} and \texttt{reco\_uboone\_mcc7\_driver\_stage2.fcl}. The source code of the \texttt{MuCSMerger} and \texttt{MuCSTagger} modules is available on the \texttt{uboonecode} repository.
